[package]
name = "task_app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
actix-rt = "2.10.0"
argon2 = "0.5"
rand = "0.8"
